@@ -1,7 +1,8 @@
 Work in progress:
 
-* Issue #73: DatabaseMetaData.getTables() Memory Leak
-* Issue #68 DatabaseMetaData.getTables() erroneously returns INDEX, TRIGGER, and other non-table objects
+* Issue #67 - Bad ResultSet returned from DatabaseMetaData.getColumns(), if a given table doesn't exist
+* Issue #73 - DatabaseMetaData.getTables() Memory Leak
+* Issue #68 - DatabaseMetaData.getTables() erroneously returns INDEX, TRIGGER, and other non-table objects
 * Issue #18 - Add support for ConnectionPool
     * Implemented javax.sql.ConnectionPoolDataSource - javax.SQLiteConnectionPoolDataSource
 * Issue #27 - Allow user to specify busy-timeout when opening a database connection
